# synthesis-lang

./: CLAUDE.md  Cargo.toml  LICENSE  PARSER_COMPLETION_SUMMARY.md  PARSER_V1_ANALYSIS.md  README.md  RELEASE_STRUCTURE.md  RUNTIME_SYSTEM_COMPLETION_SUMMARY.md  Synthesis Language Improvements and Example Analys.md  V1_ROADMAP.md  WHAT_USERS_NEED.md  build.synt  error_handling_examples.md  error_translation_demo.md  install.synt  package.syn  release.synt  syn-pkg
.claude/: settings.local.json
.claude/agents/: code-tidiness-reviewer.md  language-architect.md  synthesis-docs-writer.md
_internal_dev/: COMPILER_DESIGN.md  Enhancing Synthesis Language_ Strategic Improvemen.md  INDEPENDENCE_ROADMAP.md  README_NL.md  STANDALONE_IMPLEMENTATION.md  debug_tokens.rs  install.sh  new_features.md
_internal_dev/code-sandbox/: Cargo.toml  Dockerfile
_internal_dev/code-sandbox/.github/workflows/: sandbox-ci.yml
_internal_dev/code-sandbox/k8s/: deployment.yml
_internal_dev/code-sandbox/src/: main.rs
_internal_dev/docs/: API_REFERENCE.md  DOCUMENTATION_OUTLINE.md  INSTALLATION.md  LANGUAGE_PHILOSOPHY.md  LANGUAGE_REFERENCE.md  YEW_ROADMAP.md
_internal_dev/docs-yew/: Cargo.toml
_internal_dev/docs-yew/.github/workflows/: docs-site.yml
_internal_dev/docs-yew/src/: main.rs  routes.rs
_internal_dev/test-visualizer/: README.md  package.syn
_internal_dev/test-visualizer/src/: main.syn
_internal_dev/tests/: lexer_tests.rs  runtime_tests.rs
docs/: EXAMPLES.md  HARDWARE.md
examples/: advanced_demo.syn  audio_visualizer.syn  enhanced_audio.syn  enhanced_streams.syn  hello.syn  interactive-garden.syn  math_demo.syn  professional_daw.syn  simple_enhanced.syn  simple_gui_demo.syn
src/: error_translation_test.rs  errors.rs  lib.rs  main.rs
src/audio/: analysis.rs  effects.rs  input.rs  midi.rs  mod.rs  processor.rs
src/compiler/: backend.rs  codegen.rs  ir.rs  mod.rs  optimizer.rs
src/errors/: integration.rs
src/graphics/: advanced_effects.rs  blend_modes.rs  effects.rs  mod.rs  primitives.rs  renderer.rs
src/gui/: controls.rs  mod.rs
src/hardware/: controllers.rs  mod.rs  osc.rs  sensors.rs  webcam.rs
src/modules/: audio.rs  generate.rs  graphics.rs  gui.rs  math.rs  mod.rs  time.rs  web.rs
src/parser/: ast.rs  lexer.rs  mod.rs  parser.rs  parser_test.rs
src/runtime/: creative_api.rs  creative_types.rs  error_translation.rs  integration_example.rs  interpreter.rs  mod.rs  performance_test.rs  realtime_buffer.rs  realtime_buffer_test.rs  realtime_optimizations.rs  stream_composition.rs  stream_primitives_test.rs  streams.rs  types.rs  units.rs
tests/: integration_tests.rs  parser_tests.rs
