[package]
name = "synthesis"
version = "0.1.0"
edition = "2021"
authors = ["Synthesis Team"]
description = "A universal creative programming language for artists and musicians"
license = "MIT OR Apache-2.0"

[[bin]]
name = "synthesis"
path = "src/main.rs"

[[bin]]
name = "debug_parser"
path = "src/bin/debug_parser.rs"

[[bin]]
name = "debug_lexer_test"
path = "src/bin/debug_lexer_test.rs"

[lib]
name = "synthesis"
path = "src/lib.rs"

[dependencies]
# Parser
nom = "7.1"

# Graphics
wgpu = "0.19"
winit = "0.29"

# Audio
cpal = "0.15"

# MIDI
midir = "0.9"

# GUI
egui = "0.25"
eframe = "0.25"

# Hardware Integration
opencv = { version = "0.90", optional = true }
serialport = "4.2"

# Networking
rosc = "0.10"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
num-complex = "0.4"
rand = "0.8"
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"
