[package]
name = "synthesis-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
warp = "0.3"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File handling
tempfile = "3.2"

[dev-dependencies]
# For testing
mockall = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Security and performance optimizations
[profile.release.package."*"]
opt-level = 3
lto = true
codegen-units = 1