[package]
name = "synthesis-docs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Yew core
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.21"

# Web and performance
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Window"] }
gloo = { version = "0.10", features = ["timers"] }

# Markdown and syntax highlighting
pulldown-cmark = "0.9"
syntect = "5.0"

# Styling
tailwind-rs = "0.2"

# Search and indexing
tantivy = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
# Build-time tools
include_dir = "0.7"
walkdir = "2.3"

[profile.release]
opt-level = 's'     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # More aggressive optimizations